--- a/my_publications.bib
+++ b/my_publications.bib
@@ -1,36 +1,12 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-@article{elvira2021performance,
-  title={On  the performance of particle filters with adaptive number of particles},
-  author={Elvira, V{\'\i}ctor and Miguez, Joaqu{\'\i}n and Djuri{\'c}, Petar M},
-  journal={Statistics and Computing},
-  volume={31},
-  number={6},
-  pages={1--18},
-  year={2021},
-  publisher={Springer}
+@ARTICLE{elvira2017improving, 
+author={V. Elvira and L. Martino and D. Luengo and M. F. Bugallo}, 
+journal={Signal Processing}, 
+title={Improving {P}opulation {M}onte {C}arlo: Alternative Weighting and Resampling Schemes}, 
+year={2017}, 
+volume={131}, 
+number={12}, 
+pages={77-91},  
 }
-
-@article{elvira2022optimized,
-  title={Optimized  population monte carlo},
-  author={Elvira, V{\'\i}ctor and Chouzenoux, Emilie},
-  journal={IEEE Transactions on Signal Processing},
-  volume={70},
-  pages={2489--2501},
-  year={2022},
-  publisher={IEEE}
-}
-
- 
-
-
-@article{kviman2022multiple,
-  title={Multiple  Importance Sampling ELBO and Deep Ensembles of Variational Approximations},
-  author={Kviman, Oskar and Melin, Harald and Koptagel, Hazal and Elvira, V{\'\i}ctor and Lagergren, Jens},
-journal = {Artificial Intelligence and Statistics (AISTATS)},
-   year={2022}
-}
-
-
- 
